# Claim-anomally

./: README.md  debug_connection.py  debug_extraction.py  pyproject.toml  requirements.txt  sample_claim.txt  test_complete.txt  test_incomplete.txt  verify_regex.py  verify_validation.py
api/: index.py
backend/app/: api.py  main.py  schemas.py
dashboard/: app.py
data/: autoencoder.pth  claims.db  scaler.pkl
ml_pipeline/: features.py  ingestion.py  predict.py  train.py
ml_pipeline/models/: autoencoder.py
tests/: test_main.py
