[project]
name = "claim-fraud-detection"
version = "0.1.0"
description = "AI-powered fraud detection system for medical claim forms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "python-multipart>=0.0.9",
    "shap>=0.44.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"