[project]
name = "claim-fraud-detection"
version = "0.1.0"
description = "AI-powered fraud detection system for medical claim forms"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]